# TinyRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: geometry.cpp  geometry.h  gl.cpp  gl.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
tests/: geometryMatrixTest.cpp  geometryMatrixTest.h  geometryTest.cpp  geometryVectorTest.cpp  test.cpp
